fixed alignment issue

--- a/src/style/stepper.scss
+++ b/src/style/stepper.scss
@@ -21,7 +21,7 @@
             width: max-content;
             max-width: 200px;
             min-width: 200px;
-            transform: translate(-37%, 5px);
+            transform: translate(-39%, 5px);
             text-align: center;
             color: #BFC2C3;
             font-size: 14px;
